fix: resolve issue in getFile handler
