# docs/swagger.json
@@ -9,6 +9,38 @@
     "host": "localhost:8081",
     "basePath": "/",
     "paths": {
+        "/files/{path}": {
+            "get": {
+                "description": "Retrieve file data from specified path within the server's storage directory.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/octet-stream"
+                ],
+                "tags": [
+                    "file"
+                ],
+                "summary": "Get file",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Path including any folders and subfolders to the file",
+                        "name": "path",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "File retrieved successfully",
+                        "schema": {
+                            "type": "file"
+                        }
+                    }
+                }
+            }
+        },
         "/upload": {
             "post": {
                 "description": "Uploads a file to the specified folder within the server's storage directory.",
@@ -47,45 +79,6 @@
                         "description": "Upload file success",
                         "schema": {
                             "$ref": "#/definitions/api.uploadFileResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/{foldername}/{filename}": {
-            "get": {
-                "description": "Retrieve file data from specified folder",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/octet-stream"
-                ],
-                "tags": [
-                    "file"
-                ],
-                "summary": "Get file",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Folder Name",
-                        "name": "foldername",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "File Name",
-                        "name": "filename",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "File retrieved successfully",
-                        "schema": {
-                            "type": "file"
                         }
                     }
                 }
